--- a/man9/encoder_ratio.9.asciidoc
+++ b/man9/encoder_ratio.9.asciidoc
@@ -25,15 +25,27 @@ If neither **num_chan=** nor **names=** are specified, the default value is one.
 
 == FUNCTIONS
 **encoder-ratio.sample**
-    Read all input pins.  Must be called at twice the maximum desired count rate.
+
+[indent=4]
+====
+Read all input pins.  Must be called at twice the maximum desired count rate.
+====
 
 **encoder-ratio.update** (uses floating-point)
-    Updates all output pins.  May be called from a slower thread.
+
+[indent=4]
+====
+Updates all output pins.  May be called from a slower thread.
+====
 
 == NAMING
 The names for pins and parameters are prefixed as:
-  **encoder-ratio.N.** for N=0,1,...,num-1 when using **num_chan=num**
-  **nameN.** for nameN=name1,name2,... when using **names=name1,name2,...**
+
+[indent=4]
+====
+**encoder-ratio.N.** for N=0,1,...,num-1 when using **num_chan=num**
+**nameN.** for nameN=name1,name2,... when using **names=name1,name2,...**
+====
 
 The **encoder-ratio.N.** format is shown in the following descriptions.
 
@@ -45,33 +57,53 @@ The **encoder-ratio.N.** format is shown in the following descriptions.
 **encoder-ratio.**__N__**.slave-A** bit in
 
 **encoder-ratio.**__N__**.slave-B** bit in
-    The encoder channels of the master and slave axes
+
+[indent=4]
+====
+The encoder channels of the master and slave axes
+====
 
 **encoder-ratio.**__N__**.enable** bit in
-    When the enable pin is FALSE, the error pin simply reports the
-    slave axis position, in revolutions.  As such, it would normally
-    be connected to the feedback pin of a PID block for closed loop
-    control of the slave axis. Normally the command input of the PID
-    block is left unconnected (zero), so the slave axis simply sits
-    still.  However when the enable input goes TRUE, the error pin
-    becomes the slave position minus the scaled master position.
-    The scale factor is the ratio of master teeth to slave teeth.
-    As the master moves, error becomes non-zero, and the PID loop
-    will drive the slave axis to track the master.  
+
+[indent=4]
+====
+When the enable pin is FALSE, the error pin simply reports the
+slave axis position, in revolutions.  As such, it would normally
+be connected to the feedback pin of a PID block for closed loop
+control of the slave axis. Normally the command input of the PID
+block is left unconnected (zero), so the slave axis simply sits
+still.  However when the enable input goes TRUE, the error pin
+becomes the slave position minus the scaled master position.
+The scale factor is the ratio of master teeth to slave teeth.
+As the master moves, error becomes non-zero, and the PID loop
+will drive the slave axis to track the master.  
+====
 
 **encoder-ratio.**__N__**.error** float out
-    The error in the position of the slave (in revolutions)
+
+[indent=4]
+====
+The error in the position of the slave (in revolutions)
+====    
 
 == PARAMETERS
 **encoder-ratio.**__N__**.master-ppr** unsigned rw
 
 **encoder-ratio.**__N__**.slave-ppr** unsigned rw
-    The number of pulses per revolution of the master and slave axes
+
+[indent=4]
+====
+The number of pulses per revolution of the master and slave axes
+====
 
 **encoder-ratio.**__N__**.master-teeth** unsigned rw
 
 **encoder-ratio.**__N__**.slave-teeth** unsigned rw
-    The number of "teeth" on the master and slave gears.
+
+[indent=4]
+====
+The number of "teeth" on the master and slave gears.
+====
 
 == SEE ALSO
 **encoder(9)**
