--- a/man9/hm2_7i43.9.asciidoc
+++ b/man9/hm2_7i43.9.asciidoc
@@ -3,42 +3,54 @@
 :mansource: ../man/man9/hm2_7i43.9.asciidoc
 :man version : 
 
-
-
 == NAME
-
-hm2_7i43 -- LinuxCNC HAL driver for the Mesa Electronics 7i43 EPP Anything IO board with HostMot2 firmware.
-
+hm2_7i43 - LinuxCNC HAL driver for the Mesa Electronics 7i43 EPP Anything IO board with HostMot2 firmware.
 
 == SYNOPSIS
-
-loadrt hm2_7i43 [ioaddr=__N__**[,**__N__**...]] [ioaddr_hi=**__N__**[,**__N__**...]] [epp_wide=**__N__**[,**__N__**...]] [config=**__"str[,str...]"__**] [debug_epp=**__N__**[,**__N__**...]]
-**.RS 4
+**loadrt hm2_7i43 [ioaddr=**__N__**[,**__N__**...]] [ioaddr_hi=**__N__**[,**__N__**...]] [epp_wide=**__N__**[,**__N__**...]] [config=**__"str[,str...]"__**] [debug_epp=**__N__**[,**__N__**...]]
+**
 
 **ioaddr** [default: 0x378]
+
+[indent=4]
+====
 The base address of the parallel port.
+====
 
 **ioaddr_hi** [default: 0]
+
+[indent=4]
+====
 The secondary address of the parallel port, used to set EPP mode.
 0 means to use ioaddr + 0x400.
+====
 
 **epp_wide** [default: 1]
+
+[indent=4]
+====
 Set to zero to disable the "wide EPP mode".  "Wide" mode allows a 16-
 and 32-bit EPP transfers, which can reduce the time spent in the read
 and write functions.  However, this may not work on all EPP parallel
 ports.
+====
 
 **config** [default: ""]
+
+[indent=4]
+====
 HostMot2 config strings, described in the hostmot2(9) manpage.
+====
 
 **debug_epp** [default: 0]
+
+[indent=4]
+====
 Developer/debug use only!  Enable debug logging of most EPP
 transfers.
-.RE
-
+====
 
 == DESCRIPTION
-
 hm2_7i43 is a device driver that interfaces the Mesa 7i43 board with
 the HostMot2 firmware to the LinuxCNC HAL.  Both the 200K and the 400K
 FPGAs are supported.
@@ -61,7 +73,6 @@ putting "loadrt probe_parport" in your .hal file.
 
 
 == Jumper settings
-
 To send the FPGA configuration from the PC, the board must be configured
 to get its firmware from the EPP port.  To do this, jumpers W4 and W5
 must both be down, ie toward the USB connector.
@@ -70,9 +81,7 @@ The board must be configured to power on whether or not the USB interface
 is active.  This is done by setting jumper W7 up, ie away from the edge
 of the board.
 
-
 == Communicating with the board
-
 The 7i43 communicates with the LinuxCNC computer over EPP, the Enhanced
 Parallel Port.  This provides about 1 MBps of throughput, and the
 communication latency is very predictable and reasonably low.
@@ -96,12 +105,8 @@ communicate with the 7i43 again.
 Access to the EPP bus is not threadsafe: only one realtime thread may
 access the EPP bus.
 
-
 == SEE ALSO
-
 hostmot2(9)
 
-
 == LICENSE
-
 GPL
