--- a/man9/lineardeltakins.9.asciidoc
+++ b/man9/lineardeltakins.9.asciidoc
@@ -3,19 +3,11 @@
 :mansource: ../man/man9/lineardeltakins.9.asciidoc
 :man version : 
 
-
-
-
 == NAME
-
-lineardeltakins -- Kinematics for a linear delta robot
-
-
+lineardeltakins - Kinematics for a linear delta robot
 
 == SYNOPSIS
 loadrt lineardeltakins
-
-
 
 == KINEMATICS
 The kinematics model is appropriate for a rostock/kossel-style design
@@ -35,41 +27,52 @@ the limit switches for each joint. Once the proper distance has been determined
 The pins should be set to zero and update each joints home parameters in the INI
 file.
  
-
-
-
 == PINS
 
 lineardeltakins.R float in
+
+[indent=4]
+====
 Effective diameter of the platform.
 
 R is different than the distance from the center of the table to the
-center of the belt/smooth rod/extrusion that the joints ride on.  In
+center of the belt/smooth rod/extrusion that the joints ride on. In
 RepRap delta parlance, R is DELTA_RADIUS which is computed as
 DELTA_SMOOTH_ROD_OFFSET-DELTA_EFFECTOR_OFFSET-DELTA_CARRIAGE_OFFSET.
-
+====
 
 lineardeltakins.L float in
+
+[indent=4]
+====
 Length of the rod connecting the carriage to the effector.  In RepRap
 delta parlance, L is DELTA_DIAGONAL_ROD
-
+====
 
 lineardeltakins.J0offs float in
-Offset distance applied to Joint 0 
 
+[indent=4]
+====
+Offset distance applied to Joint 0
+====
 
 lineardeltakins.J1offs float in
-Offset distance applied to Joint 1
 
+[indent=4]
+====
+Offset distance applied to Joint 1
+====
 
 lineardeltakins.J2offs float in
+
+[indent=4]
+====
 Offset distance applied to Joint 2 
-
-
+====
 
 == NOTES
-The R and L and joint offset values can be adjusted while LinuxCNC is running.  However,
-doing so while in coordinated mode will lead to a step change in joint
+The R and L and joint offset values can be adjusted while Machinekit is running.
+However, doing so while in coordinated mode will lead to a step change in joint
 position, which generally will trigger a following error if in joint
 mode with machine on.
 
