--- a/machinekit-documentation/getting-started/APT-packages-jessie.asciidoc
+++ b/machinekit-documentation/getting-started/APT-packages-jessie.asciidoc
@@ -79,7 +79,7 @@ libczmq3:amd64/sid 3.0.2-1 uptodate
 
 [source,bash]
 ----
-sudo apt-key adv --keyserver keyserver.ubuntu.com --recv 43DDF224
+sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 43DDF224
 sudo sh -c \
   "echo 'deb http://deb.machinekit.io/debian jessie main' > \
   /etc/apt/sources.list.d/machinekit.list"
