--- a/machinekit-documentation/getting-started/APT-packages-wheezy.asciidoc
+++ b/machinekit-documentation/getting-started/APT-packages-wheezy.asciidoc
@@ -11,7 +11,7 @@
 
 [source,bash]
 ----
-sudo apt-key adv --keyserver keyserver.ubuntu.com --recv 43DDF224
+sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 43DDF224
 sudo sh -c \
   "echo 'deb http://deb.machinekit.io/debian wheezy main' > \
   /etc/apt/sources.list.d/machinekit.list"
